Fix launch configuration file path for index.html

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "msedge",
             "request": "launch",
             "name": "Open index.html",
-            "file": "c:\\Users\\kz001\\kevin_zheng_pf\\index.html"
+            "file": "C:\\Users\\kz001\\OneDrive\\Desktop\\Projects\\kevin_zheng_pf\\index.html"
         }
     ]
 }
